--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.16.2",
-    "mongoose": "^4.12.5"
+    "mongoose": "^4.12.5",
+    "passport": "^0.4.0",
+    "passport-google-oauth20": "^1.0.0"
   }
 }
