--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
   "author": "Denis Junuzovic",
   "license": "MIT",
   "dependencies": {
+    "cookie-parser": "^1.4.3",
     "express": "^4.16.2",
+    "express-handlebars": "^3.0.0",
+    "express-session": "^1.15.6",
     "mongoose": "^4.12.5",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0"
