--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "Denis Junuzovic",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "cookie-parser": "^1.4.3",
     "express": "^4.16.2",
     "express-handlebars": "^3.0.0",
