--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "express": "^4.16.2",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.6",
+    "method-override": "^2.3.10",
+    "moment": "^2.19.1",
     "mongoose": "^4.12.5",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0"
